New test home page section

--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -61,7 +61,7 @@
     <div class="container-fluid">
         <div class="latest-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell--span-4-desktop">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
                     <h2>
                         Latest SCVO blog posts
                         <a href="/blogs">Read more</a>
@@ -70,7 +70,7 @@
                     {{{_source.rendered.gist}}}
                     {{/each}}
                 </div>
-                <div class="mdc-layout-grid__cell--span-4-desktop">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
                     <h2>
                         Latest TFN news
                         <a href="http://thirdforcenews.org.uk">Read more</a>
@@ -79,7 +79,7 @@
                     {{{_source.rendered.gist}}}
                     {{/each}}
                 </div>
-                <div class="mdc-layout-grid__cell--span-4-desktop">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-4-desktop">
                     <h2>
                         Top third sector jobs
                         <a href="https://goodmoves.com">See more on <strong>good</strong>moves</a>
