Wee styling improvements

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -194,6 +194,7 @@ a:hover {
 }
 
 .sidebar {
+    .mdc-form-field,
     .mdc-button {
         width: 100%;
     }
@@ -687,6 +688,7 @@ ul.breadcrumb {
             margin-top: -0.15rem;
         }
     }
+    .post-info-share,
     .post-info-categories {
         .fa {
             color: var(--mdc-theme-primary-dark);
@@ -976,10 +978,15 @@ footer {
             display: none;
         }
     }
+    .latest-content {
+        .mdc-layout-grid {
+            width: 100%;
+        }
+    }
     .mdc-toolbar.mdc-toolbar--fixed {
         padding-top: 0;
     }
-    .mdc-toolbar__icon--menu {
+    .mdc-toolbar .mdc-toolbar__row .container-fluid .mdc-toolbar__icon {
         height: 4rem;
     }
     .mdc-toolbar #upper-tab-bar,
