--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -987,23 +987,23 @@ footer {
         padding-top: 0;
     }
     .mdc-toolbar .mdc-toolbar__row .container-fluid .mdc-toolbar__icon {
-        height: 4rem;
+        height: $spacing-unit*4;
     }
     .mdc-toolbar #upper-tab-bar,
     .mdc-toolbar .mdc-toolbar__icon,
     .mdc-toolbar .mdc-toolbar__row,
     .mdc-toolbar .mdc-form-field,
     .mdc-toolbar .mdc-toolbar__section {
-        max-height: 4rem;
+        max-height: $spacing-unit*4;
     }
     .mdc-temporary-drawer__header-content,
     .brand-logo {
         margin-left: 0;
         img {
-            max-height: 2.5rem;
+            max-height: $spacing-unit*2.5;
         }
     }
     .mdc-toolbar-fixed-adjust {
-        padding-top: $spacing-unit*6;
+        padding-top: $spacing-unit*4;
     }
 }
