New primary colour

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -6,7 +6,7 @@ $spacing-unit: 1rem;
 :root{
     --mdc-theme-primary: #00838F; // Cyan 800
     --mdc-theme-primary-fade: rgba(0, 131, 143, 0.85);
-    --mdc-theme-primary-light: #0097A7; // Cyan 700
+    --mdc-theme-primary-light: #008D9B; // Cyan 750
     --mdc-theme-primary-dark: #006064; // Cyan 900
     --mdc-theme-secondary: #FF8F00; // Amber 800
     --mdc-theme-secondary-light: #FFA000; // Amber 700
