New route method for GHQ test

--- a/functions/test-db/json2/goodhq/goodhq-styles.scss
+++ b/functions/test-db/json2/goodhq/goodhq-styles.scss
@@ -24,7 +24,7 @@ $border-width: 0.1rem;
 $avatar-size: 3.3rem;
 
 :root{
-    --mdc-theme-primary: #0097A7;
+    --mdc-theme-primary: #4033E9;
     --mdc-theme-primary-light: #E0DEFD;
     --mdc-theme-primary-dark: #0B0558;
     --mdc-theme-secondary: #9224E7;
