--- a/functions/test-db/json2/scvo/templates/about.hbs
+++ b/functions/test-db/json2/scvo/templates/about.hbs
@@ -42,7 +42,7 @@
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
                 <nav id="about-tab-bar" class="mdc-tab-bar">
-                    {{#each menus.about}}
+                    {{#each context.menus.about}}
                     <a class="mdc-tab" href="{{path}}">{{{label}}}</a>
                     {{/each}}
                 </nav>
