--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -24,9 +24,18 @@
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content event-content">
                 {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
+
+                {{#if supplimentaryResponses.related_events.hits.hits}}
+                <h3 class="author">Similar events</h3>
+                <ul class="supplimentary-list">
+                    {{#each supplimentaryResponses.related_events.hits.hits}}
+                    {{{_source.rendered.list}}}
+                    {{/each}}
+                </ul>
+                {{/if}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar event-sidebar">
-                <!-- TBC -->
+
             </div>
         </div>
     </div>
