--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -527,6 +527,12 @@ a:hover {
     display: none;
 }
 
+.scvo-event {
+    .mdc-layout-grid__inner {
+        margin-bottom: $spacing-unit/2;
+    }
+}
+
 .mdc-form-field,
 .mdc-button,
 .mdc-card__supporting-text,
