--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -47,23 +47,7 @@
                 {{{_source.rendered.list}}}
                 {{/each}}
 
-                <ul class="pagination inline-list">
-                    {{#if paging.prevPage}}
-                    <li>
-                        <a class="mdc-button mdc-button--compact" href="/policy-research/evidence-library/?{{{querystringify ../params.query page=paging.prevPage}}}">Previous</a>
-                    </li>
-                    {{/if}}
-                    {{#each paging.pageRange}}
-                    <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page{{/compare}} pagination-distance-{{this.distance}}">
-                        <a  class="mdc-button mdc-button--compact" href="/policy-research/evidence-library/?{{{querystringify ../params.query page=this.pageNumber}}}">{{this.pageNumber}}</a>
-                    </li>
-                    {{/each}}
-                    {{#if paging.nextPage}}
-                    <li>
-                        <a class="mdc-button mdc-button--compact" href="/policy-research/evidence-library/?{{{querystringify ../params.query page=paging.nextPage}}}">Next</a>
-                    </li>
-                    {{/if}}
-                </ul>
+                {{> pagination paging=paging params=params }}
             </div>
         </div>
     </div>
