--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -47,23 +47,25 @@
                 {{{_source.rendered.list}}}
                 {{/each}}
 
+                {{#compare paging.totalPages ">" 1}}
                 <ul class="pagination inline-list">
                     {{#if paging.prevPage}}
                     <li>
-                        <a class="mdc-button mdc-button--compact" href="/policy-research/evidence-library/?{{{querystringify ../params.query page=paging.prevPage}}}">Previous</a>
+                        <a class="mdc-button mdc-button--compact" href="/{{replace params.path '_' '/'}}/?{{{querystringify ../params.query page=paging.prevPage}}}">Previous</a>
                     </li>
                     {{/if}}
                     {{#each paging.pageRange}}
                     <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page{{/compare}} pagination-distance-{{this.distance}}">
-                        <a  class="mdc-button mdc-button--compact" href="/policy-research/evidence-library/?{{{querystringify ../params.query page=this.pageNumber}}}">{{this.pageNumber}}</a>
+                        <a  class="mdc-button mdc-button--compact" href="/{{replace params.path '_' '/'}}/?{{{querystringify ../params.query page=this.pageNumber}}}">{{this.pageNumber}}</a>
                     </li>
                     {{/each}}
                     {{#if paging.nextPage}}
                     <li>
-                        <a class="mdc-button mdc-button--compact" href="/policy-research/evidence-library/?{{{querystringify ../params.query page=paging.nextPage}}}">Next</a>
+                        <a class="mdc-button mdc-button--compact" href="/{{replace params.path '_' '/'}}/?{{{querystringify ../params.query page=paging.nextPage}}}">Next</a>
                     </li>
                     {{/if}}
                 </ul>
+                {{/compare}}
             </div>
         </div>
     </div>
