--- a/functions/test-db/json2/scvo/templates/page-search.hbs
+++ b/functions/test-db/json2/scvo/templates/page-search.hbs
@@ -38,25 +38,23 @@
         </div>
     {{/each}}
 
-    <div class="v-margin">
-        <ul class="pagination inline-list">
-            {{#if paging.prevPage}}
-                <li>
-                    <a class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{paging.prevPage}}">Previous</a>
-                </li>
-            {{/if}}
-
-            {{#each paging.pageRange}}
-                <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page{{/compare}} pagination-distance-{{this.distance}}">
-                    <a  class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{this.pageNumber}}">{{this.pageNumber}}</a>
-                </li>
-            {{/each}}
-
-            {{#if paging.nextPage}}
-                <li>
-                    <a class="mdc-button mdc-button--compact" href="/search?q={{../params.query.q}}&page={{paging.nextPage}}">Next</a>
-                </li>
-            {{/if}}
-        </ul>
-    </div>
+    {{#compare paging.totalPages ">" 1}}
+    <ul class="pagination inline-list">
+        {{#if paging.prevPage}}
+        <li>
+            <a class="mdc-button mdc-button--compact" href="/{{replace params.path '_' '/'}}/?{{{querystringify ../params.query page=paging.prevPage}}}">Previous</a>
+        </li>
+        {{/if}}
+        {{#each paging.pageRange}}
+        <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page{{/compare}} pagination-distance-{{this.distance}}">
+            <a  class="mdc-button mdc-button--compact" href="/{{replace params.path '_' '/'}}/?{{{querystringify ../params.query page=this.pageNumber}}}">{{this.pageNumber}}</a>
+        </li>
+        {{/each}}
+        {{#if paging.nextPage}}
+        <li>
+            <a class="mdc-button mdc-button--compact" href="/{{replace params.path '_' '/'}}/?{{{querystringify ../params.query page=paging.nextPage}}}">Next</a>
+        </li>
+        {{/if}}
+    </ul>
+    {{/compare}}
 </div>
