--- a/functions/test-db/json2/scvo/templates/staff-list.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-list.hbs
@@ -1,4 +1,4 @@
-<div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}{{#if primaryResponse.hits.hits.[0]._source.header_background}} splash-image-background{{/if}}" style="background-image: {{#if primaryResponse.hits.hits.[0]._source.header_background_gradient}}linear-gradient(185deg,var(--mdc-theme-primary-fade),var(--mdc-theme-primary-dark)75%),{{else}}{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{else}}linear-gradient(var(--mdc-theme-primary-fade),var(--mdc-theme-primary-fade)),{{/if}}{{/if}}url('{{#if primaryResponse.hits.hits.[0]._source.header_background}}{{primaryResponse.hits.hits.[0]._source.header_background}}{{else}}{{#if supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}{{/if}}');">
+<div class="splash-image {{> header_splash}}">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             {{#if primaryResponse.hits.hits.[0]._source.header_text}}
@@ -74,6 +74,8 @@
                         {{/each}}
                     </div>
                 {{/each}}
+
+                {{> pagination paging=paging params=params }}
             </div>
         </div>
     </div>
