--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <ul class="breadcrumb">
+    <ul class="breadcrumbs">
         <li><a href="/">Home</a></li>
         <li><a href="/services">Services</a></li>
     </ul>
