--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -15,12 +15,14 @@
 </div>
 
 <div class="container-fluid">
-    <ul class="breadcrumb">
+    <ul class="breadcrumbs">
         <li><a href="/">Home</a></li>
         <li><a href="/services">Services</a></li>
         <li><a href="/services/events">Events</a></li>
     </ul>
+
     <div class="mdc-layout-grid">
+
         {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
 
         <div class="mdc-layout-grid__inner">
