--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -15,7 +15,7 @@
 </div>
 
 <div class="container-fluid">
-    <ul class="breadcrumb">
+    <ul class="breadcrumbs">
         <li><a href="/">Home</a></li>
         <li><a href="/policy-research">Policy &amp; research</a></li>
     </ul>
