--- a/functions/test-db/json2/scvo/templates/members.hbs
+++ b/functions/test-db/json2/scvo/templates/members.hbs
@@ -15,7 +15,7 @@
 </div>
 
 <div class="container-fluid">
-    <ul class="breadcrumb">
+    <ul class="breadcrumbs">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
     </ul>
