--- a/functions/test-db/json2/scvo/templates/page-full-width.hbs
+++ b/functions/test-db/json2/scvo/templates/page-full-width.hbs
@@ -15,24 +15,8 @@
 </div>
 
 <div class="container-fluid">
-    {{#with primaryResponse.hits.hits.[0]._source}}
-    {{#if breadcrumb}}
-    {{#compare breadcrumb.length '>=' 1}}
-    <ul class="breadcrumb">
-        <li><a href="/">Home</a></li>
-        {{#each breadcrumb}}
-        <li>
-            <a href="{{replace url 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a>
-        </li>
-        {{/each}}
-    </ul>
-    {{else}}
-    <div class="spacer"></div>
-    {{/compare}}
-    {{else}}
-    <div class="spacer"></div>
-    {{/if}}
-    {{/with}}
+    {{> breadcrumbs}}
+
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
