--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -635,7 +635,7 @@ hr {
     border-bottom: 1px solid var(--mdc-theme-primary-fade);
 }
 
-ul.breadcrumb {
+ul.breadcrumbs {
     list-style: none;
     margin: $spacing-unit/2 0 $spacing-unit*1.5;
     border-bottom: 1px solid var(--mdc-theme-primary-fade);
