--- a/functions/test-db/json2/scvo/templates/event-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/event-booking.hbs
@@ -16,12 +16,13 @@
 
 {{#with primaryResponse.hits.hits.[0]._source}}
 <div class="container-fluid">
-    <ul class="breadcrumb">
+    <ul class="breadcrumbs">
         <li><a href="/">Home</a></li>
         <li><a href="/services">Services</a></li>
         <li><a href="/services/events">Events</a></li>
         <li><a href="/services/events/{{slug}}">{{{title}}}</a></li>
     </ul>
+
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content event-content">
