--- a/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
+++ b/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
@@ -1,7 +1,7 @@
 {{#with primaryResponse.hits.hits.[0]._source}}
 {{#if breadcrumb}}
 {{#compare breadcrumb.length '>=' 1}}
-<ul class="breadcrumb">
+<ul class="breadcrumbs">
     <li><a href="/">Home</a></li>
     {{#each breadcrumb}}
     <li>
