--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -299,21 +299,16 @@ a:hover {
         width: 100%;
     }
 }
-
-#about-tab-bar {
-    display: block;
-    .mdc-tab {
-        width: 100%;
-        display: block;
-        text-transform: none;
-        font-weight: 600;
-        color: var(--mdc-theme-primary-dark);
-    }
-    .mdc-tab:hover {
-        color: var(--mdc-theme-primary);
-    }
-    .mdc-tab:hover:after {
-        display: none;
+.v-align-img {
+    height: 22vh;
+    overflow: hidden;
+    margin-top: 1px;
+    margin-bottom: 1rem;
+    position: relative;
+    img {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
     }
 }
 
