--- a/functions/test-db/json2/scvo/templates/about.hbs
+++ b/functions/test-db/json2/scvo/templates/about.hbs
@@ -25,14 +25,7 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
-                <nav id="about-tab-bar" class="mdc-tab-bar">
-                    {{#each context.menus.about}}
-                    <a class="mdc-tab" href="{{path}}">{{{label}}}</a>
-                    {{#each this.children}}
-                    <a class="mdc-tab" href="{{path}}">{{{label}}}</a>
-                    {{/each}}
-                    {{/each}}
-                </nav>
+                {{> menu_about}}
             </div>
         </div>
     </div>
