--- a/functions/test-db/json2/scvo/templates/credit-union.hbs
+++ b/functions/test-db/json2/scvo/templates/credit-union.hbs
@@ -25,11 +25,7 @@
                 {{/with}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
-                <nav id="credit-union-tab-bar" class="mdc-tab-bar">
-                    {{#each context.menus.credit_union}}
-                    <a class="mdc-tab" href="{{path}}">{{{label}}}</a>
-                    {{/each}}
-                </nav>
+                {{> menu_credit_union}}
             </div>
         </div>
     </div>
