--- a/functions/test-db/json2/scvo/partials/pagination.hbs
+++ b/functions/test-db/json2/scvo/partials/pagination.hbs
@@ -1,25 +1,19 @@
 {{#compare paging.totalPages ">" 1}}
 <ul class="pagination inline-list">
-    {{#if paging.prevPage}}
-        <li>
-            <a class="mdc-button mdc-button--compact" href="{{params.uri.pathname}}?{{{querystringify ../params.query page=paging.prevPage}}}">Previous</a>
-        </li>
-    {{/if}}
+    <li class="{{#if paging.prevPage}}{{else}}disabled{{/if}}">
+        <a class="pagination-arrow" href="{{params.uri.pathname}}?{{{querystringify ../params.query page=paging.prevPage}}}"><i class="fa fa-fw fa-chevron-left"></i></a>
+    </li>
 
     {{#each paging.pageRange}}
         <li class="{{#compare ../paging.currentPage "===" this.pageNumber}}current-page{{/compare}} pagination-distance-{{this.distance}}">
-            <a class="mdc-button mdc-button--compact" href="{{../params.uri.pathname}}?{{{querystringify ../params.query page=this.pageNumber}}}">
+            <a class="pagination-page" href="{{../params.uri.pathname}}?{{{querystringify ../params.query page=this.pageNumber}}}">
                 {{this.pageNumber}}
             </a>
         </li>
     {{/each}}
 
-    {{#if paging.nextPage}}
-        <li>
-            <a class="mdc-button mdc-button--compact" href="{{params.uri.pathname}}?{{{querystringify ../params.query page=paging.nextPage}}}">
-                Next
-            </a>
-        </li>
-    {{/if}}
+    <li class="{{#if paging.nextPage}}{{else}}disabled{{/if}}">
+        <a class="pagination-arrow" href="{{params.uri.pathname}}?{{{querystringify ../params.query page=paging.nextPage}}}"><i class="fa fa-fw fa-chevron-right"></i></a>
+    </li>
 </ul>
 {{/compare}}
