--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -497,7 +497,7 @@ a:hover {
         margin: 0 $spacing-unit/5;
         vertical-align: bottom;
         a {
-            font-size: 1rem;
+            font-size: 1.2rem;
             line-height: $spacing-unit*2;
             height: $spacing-unit*2;
             width: $spacing-unit*2;
@@ -505,6 +505,7 @@ a:hover {
             padding: 0;
             margin: 0;
             font-weight: 600;
+            display: block;
         }
         a.pagination-arrow {
             color: #000;
@@ -528,7 +529,7 @@ a:hover {
             color: white;
         }
     }
-    li .mdc-button--compact:hover,
+    li a:hover,
     li.current-page:hover {
         background-color: var(--mdc-theme-primary);
         a {
