--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -529,7 +529,7 @@ a:hover {
             color: white;
         }
     }
-    li a:hover,
+    li:hover,
     li.current-page:hover {
         background-color: var(--mdc-theme-primary);
         a {
