Added digital funded projects

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -231,6 +231,12 @@ a:hover {
             .mdc-card__subtitle {
                 margin-top: $spacing-unit/4;
             }
+            .thumbnail {
+                img {
+                    height: 64px;
+                    width: 64px;
+                }
+            }
         }
     }
 }
