--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -163,7 +163,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <p>
-                                    &copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>.
+                                    &copy; 2017. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
                                 </p>
                             </div>
                         </div>
@@ -172,21 +172,28 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <script type="text/javascript" src="//unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script type="text/javascript">
-    // Material Design Components
-    mdc.autoInit();
+        // Cookie Consent
+        window.cookieconsent_options = {
+            learnMore: 'More info',
+            theme: 'cosmo',
+            link: '/privacy-cookies-policy'
+        };
+        // Material Design Components
+        mdc.autoInit();
 
-    // Browser Update
-    var $buoop = {notify:{i:-4,f:-4,o:-4,s:-2,c:-4},unsecure:true,api:5};
-    function $buo_f(){
-     var e = document.createElement("script");
-     e.src = "//browser-update.org/update.min.js";
-     document.body.appendChild(e);
-    };
-    try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
-    catch(e){window.attachEvent("onload", $buo_f)}
+        // Browser Update
+        var $buoop = {notify:{i:-4,f:-4,o:-4,s:-2,c:-4},unsecure:true,api:5};
+        function $buo_f(){
+            var e = document.createElement("script");
+            e.src = "//browser-update.org/update.min.js";
+            document.body.appendChild(e);
+        };
+        try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+        catch(e){window.attachEvent("onload", $buo_f)}
     </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
     <script type="text/javascript" src="inline.bundle.js"></script>
     <script type="text/javascript" src="polyfills.bundle.js"></script>
     <script type="text/javascript" src="styles.bundle.js"></script>
