--- a/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
@@ -20,6 +20,12 @@
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content library-content">
+                {{#with primaryResponse.hits.hits.[0]._source}}
+                {{{rendered.full}}}
+                {{/with}}
+
+                <hr />
+
                 <form [searchroute]="'grant_search'">
                     <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextfield">
                         <input type="text" class="mdc-textfield__input" name="q" id="grant-digital-keywords" value="{{params.query.q}}">
@@ -27,10 +33,18 @@
                         <div class="mdc-textfield__bottom-line"></div>
                     </div>
                     <div class="mdc-form-field">
-                        <select class="mdc-select" role="listbox" id="grant-digital-classification" name="classification">
-                            <option value="" {{#if params.query.classification}}{{else}}selected{{/if}}>All categories</option>
-                            {{#each supplimentaryResponses.types.aggregations.types.buckets}}
-                            <option value="{{slugify key}}" {{#compare ../params.query.classification "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
+                        <select class="mdc-select" role="listbox" id="grant-digital-call" name="call">
+                            <option value="" {{#if params.query.call}}{{else}}selected{{/if}}>All funding rounds</option>
+                            {{#each supplimentaryResponses.calls.aggregations.calls.buckets}}
+                            <option value="{{slugify key}}" {{#compare ../params.query.call "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
+                            {{/each}}
+                        </select>
+                    </div>
+                    <div class="mdc-form-field">
+                        <select class="mdc-select" role="listbox" id="grant-digital-tag" name="tag">
+                            <option value="" {{#if params.query.tag}}{{else}}selected{{/if}}>All tags</option>
+                            {{#each supplimentaryResponses.tags.aggregations.tags.buckets}}
+                            <option value="{{slugify key}}" {{#compare ../params.query.tag "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                             {{/each}}
                         </select>
                     </div>
@@ -39,8 +53,10 @@
                     </button>
                 </form>
 
+                <hr />
+
                 {{#each supplimentaryResponses.results.hits.hits}}
-                {{{_source.rendered.list}}}
+                {{{_source.rendered.search_result}}}
                 {{/each}}
 
                 {{> pagination paging=paging params=params}}
