Improvements to funded projects bit

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -605,6 +605,7 @@ a:hover {
 .credit-union .splash-image img.header-text {
     max-height: $spacing-unit*6;
 }
+.digital.participation.projects .page-info,
 .blogs .page-sidebar .page-info,
 .press-media .sidebar h3.blogs {
     display: none;
