--- a/functions/test-db/json2/scvo/templates/grant-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital.hbs
@@ -40,7 +40,7 @@
                 </form>
 
                 {{#with primaryResponse.results.hits.hits.[0]}}
-                {{{_source.rendered.full}}}
+                {{{_source.rendered.scvo_full}}}
                 {{/with}}
 
                 {{> pagination paging=paging params=params}}
