--- a/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
@@ -15,7 +15,12 @@
 </div>
 
 <div class="container-fluid">
-    {{> breadcrumbs}}
+    <ul class="breadcrumbs">
+        <li><a href="/">Home</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/services/digital">Digital</a></li>
+        <li><a href="/services/digital/participation">Participation</a></li>
+    </ul>
 
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
