--- a/functions/test-db/json2/scvo/templates/grant-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital.hbs
@@ -15,35 +15,20 @@
 </div>
 
 <div class="container-fluid">
-    {{> breadcrumbs}}
+    <ul class="breadcrumbs">
+        <li><a href="/">Home</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/services/digital">Digital</a></li>
+        <li><a href="/services/digital/participation">Participation</a></li>
+        <li><a href="/services/digital/participation/projects">Projects</a></li>
+    </ul>
 
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content library-content">
-                <form [searchroute]="'grant_search'">
-                    <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextfield">
-                        <input type="text" class="mdc-textfield__input" name="q" id="grant-digital-keywords" value="{{params.query.q}}">
-                        <label class="mdc-textfield__label" for="grant-digital-keywords">Keywords</label>
-                        <div class="mdc-textfield__bottom-line"></div>
-                    </div>
-                    <div class="mdc-form-field">
-                        <select class="mdc-select" role="listbox" id="grant-digital-classification" name="classification">
-                            <option value="" {{#if params.query.classification}}{{else}}selected{{/if}}>All categories</option>
-                            {{#each supplimentaryResponses.types.aggregations.types.buckets}}
-                            <option value="{{slugify key}}" {{#compare ../params.query.classification "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
-                            {{/each}}
-                        </select>
-                    </div>
-                    <button class="mdc-button mdc-button--raised" type="submit">
-                        Search
-                    </button>
-                </form>
-
                 {{#with primaryResponse.results.hits.hits.[0]}}
                 {{{_source.rendered.scvo_full}}}
                 {{/with}}
-
-                {{> pagination paging=paging params=params}}
             </div>
         </div>
     </div>
