--- a/functions/test-db/json2/scvo/templates/grant-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital.hbs
@@ -26,7 +26,9 @@
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content library-content">
-                {{{primaryResponse.hits.hits.[0]_source.rendered.scvo_full}}}
+                {{#with primaryResponse.hits.hits.[0]}}
+                {{{_source.rendered.scvo_full}}}
+                {{/with}}
             </div>
         </div>
     </div>
